Fix calendar so month navigation does not bleed into acutal month caldendar.
git-svn-id: https://svn.cccs.umn.edu/svn/ncs/ncs-case-management@935 59f948a9-288f-427a-98b3-c46ff3be0d89

--- a/web-app/css/calendar.css
+++ b/web-app/css/calendar.css
@@ -34,6 +34,10 @@ td.shadow {
 	background-color: #BBB;
 }
 
+div.monthNavigation {
+	clear:both;
+	padding: 1em 0;
+}
 span.nextMonth {
 	float:right;
 }
